dark mode added, corrected dark styles, companycard component added

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -27,7 +27,6 @@
     letter-spacing: -3px;
     line-height: 130px;
     text-transform: none;
-    color: #FFFFFF;
 }
 
 .subtitle {
